--- a/team.html
+++ b/team.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/responsiveNav.css">
     <link rel="stylesheet" href="style/team.css">
+    <script src="js/language.js"></script>
+
     <title>Team</title>
   </head>
   <body>
@@ -27,33 +29,59 @@
     <div id="navResp" class="navResp"></div>
 
     <script type="text/javascript">
-      var navTemplate = Handlebars.templates['nav'];
+      var navTemplate = Handlebars.templates["nav"];
 
       data = {
-        es: {
-          home: 'Inicio',
-          mision: 'Mision',
-          approach: 'Enfoque',
-          team: 'Equipo',
-          cases: 'Proyectos'
-        },
-        en: {
-          home: 'Home',
-          mision: 'Mission',
-          approach: 'Approach',
-          team: 'Team',
-          cases: 'Cases'
-        }
+            es: {
+                home: 'Inicio',
+                mision: 'Mision',
+                approach: 'Enfoque',
+                team: 'Equipo',
+                cases: 'Proyectos'
+            },
+            en: {
+                home: 'Home',
+                mision: 'Mission',
+                approach: 'Approach',
+                team: 'Team',
+                cases: 'Cases'
+            }
+
       }
 
-      document.getElementById('nav').innerHTML += navTemplate(data['es'])
+      var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+      document.getElementById('nav').innerHTML += navTemplate(data[language])
+
+      document.getElementById('language').value = language
     </script>
 
-    <script type="text/javascript">
-      var navTemplate = Handlebars.templates["responsiveNav"];
+  <script type="text/javascript">
+    var navTemplate = Handlebars.templates["responsiveNav"];
 
-      document.getElementById("navResp").innerHTML += navTemplate();
-    </script>
+    data = {
+        es: {
+            home: 'Inicio',
+            mision: 'Mision',
+            approach: 'Enfoque',
+            team: 'Equipo',
+            cases: 'Proyectos'
+        },
+        en: {
+            home: 'Home',
+            mision: 'Mission',
+            approach: 'Approach',
+            team: 'Team',
+            cases: 'Cases'
+        }
+
+    }
+
+    var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+    document.getElementById('navResp').innerHTML += navTemplate(data[language])
+  </script>
 
     <div class="home_0"></div>
 
@@ -82,7 +110,10 @@
             }
         }
 
-        document.getElementById('approach_1').innerHTML += navTemplate(data['en'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+        document.getElementById('title_0').innerHTML += navTemplate(data[language])
     </script>
 
     <div class="background">
@@ -135,7 +166,10 @@
             }
         }
 
-        document.getElementById('teamContent').innerHTML += navTemplate(data['en'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+        document.getElementById('teamContent').innerHTML += navTemplate(data[language])
       </script>        
     </section>
 
@@ -164,7 +198,10 @@
             }
         }
 
-        document.getElementById('title_1').innerHTML += navTemplate(data['en'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+        document.getElementById('title_1').innerHTML += navTemplate(data[language])
     </script>
 
     <section class="teamPersons">
@@ -197,7 +234,10 @@
           }
         }
 
-        document.getElementById('person1').innerHTML += navTemplate(data['es'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+        document.getElementById('person1').innerHTML += navTemplate(data[language])
       </script>
 
       <script type="text/javascript">
@@ -227,7 +267,10 @@
             }
           }
 
-          document.getElementById('person2').innerHTML += navTemplate(data['es'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+        document.getElementById('person2').innerHTML += navTemplate(data[language])
       </script>
     </section>
 
@@ -238,17 +281,23 @@
       var footerTemplate = Handlebars.templates["footer"];
 
       var data = {
-          es: {
-            text_1: '¿Construimos algo grande juntos?'
-          },
-          en: {
-            text_1: 'Do we build something big together? '
-          }
+            es: {
+                text_1: '¿Construimos algo grande juntos?',
+                name: 'Nombre y Apellido',
+                mail: 'Correo Electronico',
+                mensaje: 'Mensaje'
+            },
+            en: {
+                text_1: 'Do we build something big together? ',
+                name: 'Full Name',
+                mail: 'E-Mail',
+                mensaje: 'Message'
+            }
         }
 
-        //var language = localStorage.getItem('lang')
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
 
-        document.getElementById('form').innerHTML += footerTemplate(data['es'])
+        document.getElementById('form').innerHTML += footerTemplate(data[language])
     </script>
     
     <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
