--- a/ivascular.html
+++ b/ivascular.html
@@ -8,23 +8,52 @@
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/titleCase.css">
     <link rel="stylesheet" href="style/responsiveNav.css">
+    <script src="js/language.js"></script>
+
     <title>iVscular</title>
 </head>
 <body>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
 
-    <script type="text/javascript" src="js/nav.js"></script>
-    <script type="text/javascript" src="js/footer.js"></script>
     <script type="text/javascript" src="js/case.js"></script>
     <script type="text/javascript" src="js/responsiveNav.js"></script>
     <script type="text/javascript" src="js/titleCase.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
+    <script type="text/javascript" src="js/footer.js"></script>
 
     <div id="navResp" class="navResp"></div>
     <header id="nav"></header>
 
     <script type="text/javascript">
-        var navTemplate = Handlebars.templates['nav'];
+        var navTemplate = Handlebars.templates["nav"];
+  
+        data = {
+              es: {
+                  home: 'Inicio',
+                  mision: 'Mision',
+                  approach: 'Enfoque',
+                  team: 'Equipo',
+                  cases: 'Proyectos'
+              },
+              en: {
+                  home: 'Home',
+                  mision: 'Mission',
+                  approach: 'Approach',
+                  team: 'Team',
+                  cases: 'Cases'
+              }
+  
+          }
+          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+  
+          document.getElementById('nav').innerHTML += navTemplate(data[language])
+  
+          document.getElementById('language').value = language
+    </script>
+
+    <script type="text/javascript">
+        var navTemplate = Handlebars.templates["responsiveNav"];
 
         data = {
             es: {
@@ -44,13 +73,10 @@
 
         }
 
-        document.getElementById('nav').innerHTML += navTemplate(data['es'])
-    </script>
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
 
-    <script type="text/javascript">
-        var navTemplate = Handlebars.templates["responsiveNav"];
 
-        document.getElementById("navResp").innerHTML += navTemplate();
+        document.getElementById('navResp').innerHTML += navTemplate(data[language])
     </script>
 
     <div id="title"></div>
@@ -73,7 +99,7 @@
         texto_iv += "<p> A través de la calidad y soporte en evidencia clínica, está presente en 96 países, siendo así un referente en el mercado.</p> "
         texto_iv += "<p> WWC participa del liderazgo en Latino América, brindado soporte gerencial en todos y cada uno de los territorios de esta región. El principal foco de desarrollo es lograr un posicionamiento que brinde a los pacientes mejores, y más accesibles, tratamientos a sus enfermedades endovasculares, junto con un crecimiento sostenido y sustentable a la organización en todo LATAM.</p> "
         
-        var texto_es = ''
+        var texto_en = '<p>Leading company in medical devices and innovation of European origin, focused on the creation of therapeutic solutions for Cardiovascular and Neurovascular diseases.</p><p>Through quality and support in clinical evidence, it is present in 96 countries, thus being a benchmark in the market.</p><p>WWC participates in leadership in Latin America, providing managerial support in each and every one of the territories of this region. The main focus of development is to achieve a position that provides patients with better and more accessible treatments for their endovascular diseases, along with sustained and sustainable growth to the organization throughout LATAM.</p>'
 
         var img_1 = '<img src="img/ivascularImg1.png" alt="" class="img1">'
         var img_2 = '<img src="img/ivascularImg2.png" alt="" class="img2">'
@@ -82,6 +108,13 @@
         var sectoProEn = 'Health'
         var logPro = '<img class="alto" src="img/logoCentury.png" alt="">'
 
+        var cliente = 'Cliente'
+        var sector = 'Sector'
+        var cliente_en = 'Client'
+
+        var path ='century.html'
+
+
         var data = {
             es: {
                 texto: texto_iv,
@@ -89,7 +122,10 @@
                 img2: img_2,
                 nextProyect: nextPro,
                 sectorProyect: sectoPro,
-                logoProyect: logPro
+                logoProyect: logPro,
+                cliente: cliente,
+                sector: sector,
+                path: path
             },
             en: {
                 texto: texto_en,
@@ -97,31 +133,42 @@
                 img2: img_2,
                 nextProyect: nextPro,
                 sectorProyect: sectoProEn,
-                logoProyect: logPro
+                logoProyect: logPro,
+                cliente: cliente_en,
+                sector: sector,
+                path: path
             }            
         }
 
-        document.getElementById('proyectIvascular').innerHTML += navTemplate(data['es'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+        document.getElementById('proyectIvascular').innerHTML += navTemplate(data[language])
     </script>
 
     <footer id='form'></footer>
 
     <script type="text/javascript">
-        var footerTemplate = Handlebars.templates['footer'];
-
+        var footerTemplate = Handlebars.templates["footer"];
+  
         var data = {
-            es: {
-                text_1: '¿Construimos algo grande juntos?'
-            },
-            en: {
-                text_1: 'Do we build something big together? '
-            }
-        }
-
-        //var language = localStorage.getItem('lang')
-
-        document.getElementById('form').innerHTML += footerTemplate(data['es'])
-    </script>
+              es: {
+                  text_1: '¿Construimos algo grande juntos?',
+                  name: 'Nombre y Apellido',
+                  mail: 'Correo Electronico',
+                  mensaje: 'Mensaje'
+              },
+              en: {
+                  text_1: 'Do we build something big together? ',
+                  name: 'Full Name',
+                  mail: 'E-Mail',
+                  mensaje: 'Message'
+              }
+          }
+  
+          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+  
+          document.getElementById('form').innerHTML += footerTemplate(data[language])
+      </script>
 
     <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
 </body>
