--- a/saludPrevent.html
+++ b/saludPrevent.html
@@ -8,25 +8,48 @@
     <link rel="stylesheet" href="style/titleCase.css">
     <link rel="stylesheet" href="style/responsiveNav.css">
     <link rel="stylesheet" href="style/fonts.css">
+    <script src="js/language.js"></script>
+
     <title>Salud Prevent</title>
 </head>
-<body>
+<body onload="setLanguage()">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
 
-    <script type="text/javascript" src="js/nav.js"></script>
-    <script type="text/javascript" src="js/footer.js"></script>
     <script type="text/javascript" src="js/case.js"></script>
     <script type="text/javascript" src="js/responsiveNav.js"></script>
     <script type="text/javascript" src="js/titleCase.js"></script>
+    <script type="text/javascript" src="js/footer.js"></script>
+    <script type="text/javascript" src="js/nav.js"></script>
 
     <header id="nav"></header>
     <div id="navResp" class="navResp"></div>
 
     <script type="text/javascript">
-        var navTemplate = Handlebars.templates['nav'];
-
-        document.getElementById('nav').innerHTML += navTemplate()
+        var navTemplate = Handlebars.templates["nav"];
+  
+        data = {
+              es: {
+                  home: 'Inicio',
+                  mision: 'Mision',
+                  approach: 'Enfoque',
+                  team: 'Equipo',
+                  cases: 'Proyectos'
+              },
+              en: {
+                  home: 'Home',
+                  mision: 'Mission',
+                  approach: 'Approach',
+                  team: 'Team',
+                  cases: 'Cases'
+              }
+  
+          }
+          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+  
+          document.getElementById('nav').innerHTML += navTemplate(data[language])
+  
+          document.getElementById('language').value = language
     </script>
 
     <script type="text/javascript">
@@ -50,7 +73,10 @@
 
         }
 
-        document.getElementById('nav').innerHTML += navTemplate(data['es'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+
+        document.getElementById('navResp').innerHTML += navTemplate(data[language])
     </script>
 
     <div id="title"></div>
@@ -73,7 +99,7 @@
         texto_iv += "<p>Esta solución busca mantener a las personas en la salud a través de la reeducación y el cambio de hábitos con el objetivo de mejorar la calidad de vida y disminuir el riesgo de enfermedades cardiovasculares que pueden llevar a la muerte. Reducir los factores de riesgo cardíacos no es un tema de tratamientos farmacológicos sino de cambio de hábitos y conocimiento aplicado al día a día. Dietas, ejercicio, reducir el estrés y otros puntos clave de los cambios de conductas, requieren un proceso de aprendizaje y educación.</p>"
         texto_iv += "<p>Partiendo de la ciencia, desarrollamos una terapéutica digital que permite el monitoreo de poblaciones de riesgo y actuar a tiempo con programas a medida de cada individuo.<p/><p>Una de cada 3 personas morirán por causas cardiovasculares a nivel mundial y el rol de la educación puede reducir significativamente estas cifras.</p>"
         
-        var texto_es = '<p>As in the health area, Salud Prevent participates in the development of an education and digital therapy platform, which allows patients to patients learn to take care of themselves more and better.</p> <p>This solution seeks to keep people in health through reeducation and change of habits with the aim of improving the quality of life and decrease the risk of cardiovascular diseases that can lead to death. Reducing cardiac risk factors is not a matter of pharmacological treatments but of changing habits and knowledge applied to the day to day. Diets, exercise, reduce stress and other points key to behavioral changes require a process of learning and education.</p> <p>Starting from science, we develop a digital therapy that allows monitoring populations at risk and acting on time with programs tailored to each individual.</p> <p>One in 3 people will die of cardiovascular causes worldwide and the role of education can significantly reduce these figures.</p>'
+        var texto_en = '<p>As in the health area, Salud Prevent participates in the development of an education and digital therapy platform, which allows patients to patients learn to take care of themselves more and better.</p> <p>This solution seeks to keep people in health through reeducation and change of habits with the aim of improving the quality of life and decrease the risk of cardiovascular diseases that can lead to death. Reducing cardiac risk factors is not a matter of pharmacological treatments but of changing habits and knowledge applied to the day to day. Diets, exercise, reduce stress and other points key to behavioral changes require a process of learning and education.</p> <p>Starting from science, we develop a digital therapy that allows monitoring populations at risk and acting on time with programs tailored to each individual.</p> <p>One in 3 people will die of cardiovascular causes worldwide and the role of education can significantly reduce these figures.</p>'
 
         var img_1 = '<img src="img/saludImg1.png" alt="" class="img1">'
         var img_2 = '<img src="img/saludImg2.png" alt="" class="img2">'
@@ -82,6 +108,13 @@
         var sectoProEn = 'Health'
         var logPro = '<img class="ancho" src="img/ivascularLogo.png" alt="">'
 
+        var cliente = 'Cliente'
+        var sector = 'Sector'
+        var cliente_en = 'Client'
+
+        var path = 'ivascular.html'
+
+
         var data = {
             es: {
                 texto: texto_iv,
@@ -89,7 +122,10 @@
                 img2: img_2,
                 nextProyect: nextPro,
                 sectorProyect: sectoPro,
-                logoProyect: logPro
+                logoProyect: logPro,
+                cliente: cliente,
+                sector: sector,
+                path: path
             },
             en: {
                 texto: texto_en,
@@ -97,31 +133,42 @@
                 img2: img_2,
                 nextProyect: nextPro,
                 sectorProyect: sectoProEn,
-                logoProyect: logPro
+                logoProyect: logPro,
+                cliente: cliente_en,
+                sector: sector,
+                path: path
             }            
         }
 
-        document.getElementById('proyectIvascular').innerHTML += navTemplate(data['es'])
+        var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+
+        document.getElementById('proyectIvascular').innerHTML += navTemplate(data[language])
     </script>
 
     <footer id='form'></footer>
 
     <script type="text/javascript">
-        var footerTemplate = Handlebars.templates['footer'];
-
+        var footerTemplate = Handlebars.templates["footer"];
+  
         var data = {
-            es: {
-                text_1: '¿Construimos algo grande juntos?'
-            },
-            en: {
-                text_1: 'Do we build something big together? '
-            }
-        }
-
-        //var language = localStorage.getItem('lang')
-
-        document.getElementById('form').innerHTML += footerTemplate(data['es'])
-    </script>
+              es: {
+                  text_1: '¿Construimos algo grande juntos?',
+                  name: 'Nombre y Apellido',
+                  mail: 'Correo Electronico',
+                  mensaje: 'Mensaje'
+              },
+              en: {
+                  text_1: 'Do we build something big together? ',
+                  name: 'Full Name',
+                  mail: 'E-Mail',
+                  mensaje: 'Message'
+              }
+          }
+  
+          var language = !localStorage.getItem('language') ? 'es' : localStorage.getItem('language')
+  
+          document.getElementById('form').innerHTML += footerTemplate(data[language])
+      </script>
 
     <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
 </body>
