segundo pedido de cambios

--- a/ivascular.html
+++ b/ivascular.html
@@ -96,7 +96,7 @@
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['case'];
         var texto_iv = "<p>líder en dispositivos médicos e innovación de origen europeo, con foco en la creación de soluciones terapéuticas de enfermedades Cardiovasculares y Neurovasculares.</p>"
-        texto_iv += "<p> A través de la calidad y soporte en evidencia clínica, está presente en 96 países, siendo así un referente en el mercado.</p> "
+        texto_iv += "<p> A través de la calidad y soporte en evidencia clínica, está presente en 96 países, siendo así un referente en el mercado.</p> " + '<img src="img/ivascularImg1.png" alt="" class="img1">'
         texto_iv += "<p> WWC participa del liderazgo en Latino América, brindado soporte gerencial en todos y cada uno de los territorios de esta región. El principal foco de desarrollo es lograr un posicionamiento que brinde a los pacientes mejores, y más accesibles, tratamientos a sus enfermedades endovasculares, junto con un crecimiento sostenido y sustentable a la organización en todo LATAM.</p> "
         
         var texto_en = '<p>Leading company in medical devices and innovation of European origin, focused on the creation of therapeutic solutions for Cardiovascular and Neurovascular diseases.</p><p>Through quality and support in clinical evidence, it is present in 96 countries, thus being a benchmark in the market.</p><p>WWC participates in leadership in Latin America, providing managerial support in each and every one of the territories of this region. The main focus of development is to achieve a position that provides patients with better and more accessible treatments for their endovascular diseases, along with sustained and sustainable growth to the organization throughout LATAM.</p>'
