Cambios desktop y algunos mobile.

--- a/century.html
+++ b/century.html
@@ -121,9 +121,12 @@
         var img_1 = '<img src="img/centuryImg1.png" alt="" class="img1">'
         var img_2 = '<img src="img/centuryImg2.png" alt="" class="img2">'
         var nextPro = 'Century 21'
-        var sectoPro = 'Salud'
-        var sectoProEn = 'Health'
+        var sectoPro = 'Vivienda'
+        var sectoProEn = 'Housing'
         var logPro = '<img class="ancho" src="img/logoSalud.png" alt="">'
+
+        var copete1 = '<p class="last"></p>'
+        var copete2 = '<p class="last"></p>'
 
         var cliente = 'Cliente'
         var sector = 'Sector'
@@ -137,6 +140,8 @@
                 texto: texto_iv,
                 img1: img_1,
                 img2: img_2,
+                copete1: copete1,
+                copete2: copete2,
                 nextProyect: nextPro,
                 sectorProyect: sectoPro,
                 logoProyect: logPro,
@@ -148,6 +153,8 @@
                 texto: texto_en,
                 img1: img_1,
                 img2: img_2,
+                copete1: copete1,
+                copete2: copete2,
                 nextProyect: nextPro,
                 sectorProyect: sectoProEn,
                 logoProyect: logPro,
