--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       var title = '<span>La forma</span> <br /><span>más rápida </span><br /><span>de alcanzar</span> <br /><span>el éxito.</span>'
       var title_res = '<span>La forma</span><span>más rápida </span><span>de alcanzar</span><span>el éxito.</span>'
       var h1 = 'En un entorno de cambio exponencial,<br />la adaptación es la llave.'
-      var h2 = 'El éxito es subjetivo, en cambio los resultados son concretos. <br />los objetivos claros fijan “el norte” y guían a la organización <br />a lograrlo .'
+      var h2 = 'El éxito es subjetivo, en cambio los resultados son concretos. <br />Los objetivos claros fijan “el norte” y guían a la organización a lograrlo .'
       var readme_1_h4 = 'Mapeo'
       var readme_1_p = 'Realizamos un mapa de la situacion, <br />identificando los problemas.'
       var readme_2_h4 = 'Estrategia'
