--- a/ivascular.html
+++ b/ivascular.html
@@ -94,6 +94,8 @@
     <div id="proyectIvascular"></div>
 
     <script type="text/javascript">
+        var copete1 = '<p class="last"></p>'
+        var copete2 = '<p class="last">Lluis Duocastella | CEO</p>'
         var navTemplate = Handlebars.templates['case'];
         var texto_iv = "<p>líder en dispositivos médicos e innovación de origen europeo, con foco en la creación de soluciones terapéuticas de enfermedades Cardiovasculares y Neurovasculares.</p>"
         texto_iv += "<p> A través de la calidad y soporte en evidencia clínica, está presente en 96 países, siendo así un referente en el mercado.</p> " + '<img src="img/ivascularImg1.png" alt="" class="img1">'
@@ -120,6 +122,8 @@
                 texto: texto_iv,
                 img1: img_1,
                 img2: img_2,
+                copete1: copete1,
+                copete2: copete2,
                 nextProyect: nextPro,
                 sectorProyect: sectoPro,
                 logoProyect: logPro,
@@ -131,6 +135,8 @@
                 texto: texto_en,
                 img1: img_1,
                 img2: img_2,
+                copete1: copete1,
+                copete2: copete2,
                 nextProyect: nextPro,
                 sectorProyect: sectoProEn,
                 logoProyect: logPro,
