--- a/team.html
+++ b/team.html
@@ -245,7 +245,7 @@
           var img = '<img class="img" src="img/person2.png" alt="">'
           var position = 'IM'
           var personName = 'Fabián Cassan'
-          var text = 'Especialista en estrategias de inbound marketing para generar relaciones duraderas con los clientes.'
+          var text = 'Especialista en estrategias de inbound marketing para generar relaciones duraderas con los clientes.<br>'
           var redes = '<a>LinkedIn</a>'
 
           var text_en = 'Specialist in inbound marketing strategies to generate lasting relationships with clients.'
