cambios mobile segunda parte.

--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
       var title = '<span>La forma</span> <br /><span>más rápida </span><br /><span>de alcanzar</span> <br /><span>el éxito.</span>'
       var title_res = '<span>La forma</span><span>más rápida </span><span>de alcanzar</span><span>el éxito.</span>'
       var h1 = 'En un entorno de cambio exponencial,<br />la adaptación es la llave.'
-      var h2 = 'El éxito es subjetivo, en cambio los resultados son concretos. <br />Los objetivos claros fijan “el norte” y guían a la organización a lograrlo .'
+      var h2 = 'El éxito es subjetivo, en cambio los resultados son concretos. <br />Los objetivos claros fijan “el norte” y guían a la organización <br /> a lograrlo .'
+      var h1r = 'En un entorno<br> de cambio exponencial,<br />la adaptación es la llave.'
+      var h2r = 'El éxito es subjetivo, en cambio<br /> los resultados son concretos. <br />Los objetivos claros fijan “el norte” y guían <br /> a la organización a lograrlo .'
       var readme_1_h4 = 'Mapeo'
       var readme_1_p = 'Realizamos un mapa de la situacion, <br />identificando los problemas.'
       var readme_2_h4 = 'Estrategia'
-      var readme_2_p = 'Desarrollamos la estrategia para sortear <br />las barreras y alcanzamos el objetivo.'
+      var readme_2_p = 'Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.'
       var readme_3_h4 = 'Ejecución'
       var readme_3_p = 'Diseñamos el plan junto a un equipo <br />altamente capacitado y lo ejecutamos'
 
@@ -118,6 +120,8 @@
               title_res: title_res,
               h1: h1,
               h2: h2,
+              h1r: h1r,
+              h2r: h2r,
               readme_1_h4: readme_1_h4,
               readme_1_p: readme_1_p,
               readme_2_h4: readme_2_h4,
@@ -130,6 +134,8 @@
               title_res: title_res_en,
               h1: h1_en,
               h2: h2_en,
+              h1r: h1_en,
+              h2r: h2_en,
               readme_1_h4: readme_1_h4_en,
               readme_1_p: readme_1_p_en,
               readme_2_h4: readme_2_h4_en,
