08-12-2020: Eliminados espacios extras

--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
       var h1r = 'En un entorno<br> de cambio exponencial,<br />la adaptación es la llave.'
       var h2r = 'El éxito es subjetivo, en cambio<br /> los resultados son concretos. <br />Los objetivos claros fijan “el norte” y guían <br /> a la organización a lograrlo .'
       var readme_1_h4 = 'Mapeo'
-      var readme_1_p = 'Realizamos un mapa de la situacion, <br />identificando los problemas.'
+      var readme_1_p = 'Realizamos un mapa de la situacion, identificando los problemas.'
       var readme_2_h4 = 'Estrategia'
       var readme_2_p = 'Desarrollamos la estrategia para sortear las barreras y alcanzamos el objetivo.'
       var readme_3_h4 = 'Ejecución'
-      var readme_3_p = 'Diseñamos el plan junto a un equipo <br />altamente capacitado y lo ejecutamos'
+      var readme_3_p = 'Diseñamos el plan junto a un equipo altamente capacitado y lo ejecutamos'
 
       var title_en = '<span>The fastest</span> <br /><span>way to </span><br /><span>success.</span>'
       var title_res_en = '<span>The fastest</span><span>way to </span><span>success.</span>'
       var h1_en = 'In an environment of exponential change, <br />adaptation is the key.'
       var h2_en = 'Success is subjective, instead the results are concrete. <br />Clear objectives set "the north" and guide the organization<br />to achieve it.'
       var readme_1_h4_en = 'Mapping'
-      var readme_1_p_en = 'We identify problems making a map <br />of the situation.'
+      var readme_1_p_en = 'We identify problems making a map of the situation.'
       var readme_2_h4_en = 'Strategy'
-      var readme_2_p_en = 'We develop the strategy to overcome the barriers <br />and achieve the objective.'
+      var readme_2_p_en = 'We develop the strategy to overcome the barriers and achieve the objective.'
       var readme_3_h4_en = 'Execution'
       var readme_3_p_en = 'We design and execute the plan with a highly trained team.'
 
