Remove extra text

--- a/saludPrevent.html
+++ b/saludPrevent.html
@@ -95,7 +95,7 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates['case'];
-        var copete1 = '<p class="hidde">Dr. Jorge Belardi | Presidente ICBA</p><p class="last hidde">Mr. Peter Nicholas | Fundador de Boston Scientific</p>'
+        var copete1 = '<p class="hidden">Dr. Jorge Belardi | Presidente ICBA</p><p class="last hidden">Mr. Peter Nicholas | Fundador de Boston Scientific</p>'
         var copete2 = '<p class="last"></p>'
         var texto_iv = "<p>Al igual que en el área de salud, Salud Prevent participa en el desarrollo de una plataforma de educación y de terapia digital, que permite a los pacientes aprender a cuidarse más y mejor.</p>"
         texto_iv += "<p>Esta solución busca mantener a las personas en la salud a través de la reeducación y el cambio de hábitos con el objetivo de mejorar la calidad de vida y disminuir el riesgo de enfermedades cardiovasculares que pueden llevar a la muerte. Reducir los factores de riesgo cardíacos no es un tema de tratamientos farmacológicos sino de cambio de hábitos y conocimiento aplicado al día a día. Dietas, ejercicio, reducir el estrés y otros puntos clave de los cambios de conductas, requieren un proceso de aprendizaje y educación.</p>" + '<img src="img/saludImg1.png" alt="" class="img1">' + copete1
